[package]
name = "yulid"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
# published 0.4 has an overflow bug with negative i64s being used as timestamps (#292)
# chrono = "0.4"
chrono = { git = "https://github.com/chronotope/chrono" }
byteorder = { version = "1", features = ["i128"] }
rand = "0.6"
uuid = { version = "0.7", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
uuid = { version = "0.7", features = ["v4"] }
serde_derive = "1"
serde_json = "1"
serde_cbor = "0.9"
